# iFishMass

./: LICENSE  MANIFEST.in  README.md  peak.ini  pyproject.toml  requirements.txt  setup.py
src/iFishMass/: DataAnalysis.py  Raw.py  __main__.py  analysis_plot.xlsx  config_file.py  highest_intensities_among_all_raw.csv  highest_intensities_per_raw.csv  highest_intensities_per_raw_wide.csv  intensities_among_all_raw.csv  peak.ini  requirements.txt
src/iFishMass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/iFishMass/data/: template.xlsx
